--- a/az-fn/requirements.txt
+++ b/az-fn/requirements.txt
@@ -3,6 +3,8 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions
+azure-identity
+azure-keyvault-secrets
 boto3
 markovify
 atproto
